<resources>
    <string name="app_name">mobile.view-ui</string>
    <string name="please_select">请选择</string>
    <string name="required_input">必填</string>
    <string name="not_required_input">可不填</string>
    <string name="dialog_btn_fallback">回退</string>
    <!--弹出框-->
    <string name="dialog_btn_clear">清空</string>
    <string name="dialog_btn_cancel">取消</string>
    <string name="dialog_btn_ok">完成</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="finish">完成</string>

    <string name="delete">删除</string>
    <string name="close">关闭</string>
    <string name="refresh">刷新</string>
    <string name="shift_print">打印</string>
    <string name="cloud_task_setting">设置</string>
    <string name="search">搜索</string>
    <string name="go_back">返回</string>
    <string name="prev_page">上页</string>
    <string name="next_page">下页</string>
    <string name="takeout_new">新增</string>
    <string name="modify">修改</string>
    <string name="takeout_approve">同意</string>


    <string name="new_order">开单</string>
    <string name="edit_order">改单</string>
    <string name="confirm_order">下单</string>
    <string name="urge_order">催单</string>
    <string name="takeout_cancel_order">撤单</string>
    <string name="order_menu">点菜</string>
    <string name="cash_menubook">菜单</string>
    <string name="reserve_arrange_seat">排桌</string>
    <string name="reserve_arrive">到达</string>
    <string name="takeout_check_out">结账</string>


    <string name="length_tip_max_ok" formatted="false">已经最长了.</string>
    <string name="number_tip_max_length" formatted="false">最多%d个数位.</string>
    <string name="number_tip" formatted="false">%1$d-%2$d之间的数字.</string>
    <string name="number_tip_min" formatted="false">大于%1$d的数字.</string>
    <string name="number_tip_max" formatted="false">小于%1$d的数字.</string>
    <string name="number_min_valid">数字太小</string>
    <string name="number_max_valid">数字太大</string>
    <string name="input_error">不符合要求,已取消</string>
    <string name="how_much_word_left">还可以输入</string>
    <string name="word">字</string>
    <string name="word_over_large_tip_format">字符数不能超过%s</string>
    <string name="please_input_tip">输入不能为空哦！</string>

    <string name="pull_to_refresh_pull_label">下拉刷新...</string>
    <string name="pull_to_refresh_release_label">释放立即刷新...</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新...</string>
    <string name="pull_to_refresh_pull_label1">上拉加载...</string>
    <string name="pull_to_refresh_release_label1">上拉加载...</string>
    <string name="pull_to_refresh_refreshing_label1">正在加载中...</string>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day_day">日</string>
    <string name="hour">时</string>
    <string name="minute_minute">分</string>

    <!--FetchmentStampView-->
    <string name="all">全部</string>
    <string name="takemeal_all_taken">已取餐</string>

    <!--数字键 LargeKeyboardView-->
    <string name="zero_zero">00</string>
    <string name="zero_">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="decimal_point">.</string>
    <string name="percent">%</string>
    <string name="semicolon">;</string>
    <string name="colon">:</string>
    <string name="number">No.</string>
    <string name="minus_sign">-</string>

    <!--N10-->
    <string name="edit_instance_num">修改数量</string>
    <string name="cancel_menu">退菜</string>
    <string name="split_order">分单</string>
</resources>
